--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,15 @@
 @import "tailwindcss";
+
+.css-q6z9h2-MuiTableCell-root {
+    padding: 0 !important;
+}
+
+.MuiTableRow-root td:first-child {
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
+
+.MuiTableRow-root td:last-child {
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
