--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,14 @@
-.css-q6z9h2-MuiTableCell-root {
+/* .css-q6z9h2-MuiTableCell-root {
     padding: 0 !important;
 }
 
-.MuiTableRow-root td:first-child {
+
+.MuiTableRow-root th:first-child {
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
 }
 
-.MuiTableRow-root td:last-child {
+.MuiTableRow-root th:last-child {
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
-}
+} */
